# ChangeLog for dev-db/phpmyadmin
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.200 2006/09/12 03:57:41 rl03 Exp $

  12 Sep 2006; Renat Lumpau <rl03@gentoo.org>
  files/postinstall-en-2.8.0.txt:
  Fix instructions per bug #146567.

*phpmyadmin-2.8.2.4 (22 Aug 2006)

  22 Aug 2006; Renat Lumpau <rl03@gentoo.org> -phpmyadmin-2.8.2.3.ebuild,
  +phpmyadmin-2.8.2.4.ebuild:
  Version bump

*phpmyadmin-2.8.2.3 (22 Aug 2006)

  22 Aug 2006; Renat Lumpau <rl03@gentoo.org> -phpmyadmin-2.8.2.2.ebuild,
  +phpmyadmin-2.8.2.3.ebuild:
  Version bump

*phpmyadmin-2.8.2.2 (21 Aug 2006)

  21 Aug 2006; Renat Lumpau <rl03@gentoo.org> -phpmyadmin-2.8.2.1.ebuild,
  +phpmyadmin-2.8.2.2.ebuild:
  Version bump, bug #144340.

*phpmyadmin-2.8.2.1 (03 Aug 2006)

  03 Aug 2006; Renat Lumpau <rl03@gentoo.org> +phpmyadmin-2.8.2.1.ebuild:
  Version bump

  24 Jul 2006; Renat Lumpau <rl03@gentoo.org> -phpmyadmin-2.8.0.4.ebuild,
  -phpmyadmin-2.8.1.ebuild:
  Housekeeping

  10 Jul 2006; Joshua Jackson <tsunam@gentoo.org> phpmyadmin-2.8.2.ebuild:
  Stable x86; security bug #138903

  07 Jul 2006; Jose Luis Rivero <yoswink@gentoo.org>
  phpmyadmin-2.8.2.ebuild:
  Stable on alpha wrt security bug #138903

  04 Jul 2006; Rene Nussbaumer <killerfox@gentoo.org>
  phpmyadmin-2.8.2.ebuild:
  Stable on hppa. See bug #138903.

  03 Jul 2006; Lars Weiler <pylon@gentoo.org> phpmyadmin-2.8.2.ebuild:
  Stable on ppc; security bug #138903.

  03 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  phpmyadmin-2.8.2.ebuild:
  Stable on sparc wrt security #138903

  03 Jul 2006; Thomas Cort <tcort@gentoo.org> phpmyadmin-2.8.2.ebuild:
  Stable on amd64 wrt security Bug #138903.

*phpmyadmin-2.8.2 (01 Jul 2006)

  01 Jul 2006; Renat Lumpau <rl03@gentoo.org> +phpmyadmin-2.8.2.ebuild:
  Version bump

  20 Jun 2006; Renat Lumpau <rl03@gentoo.org>
  files/postinstall-en-2.8.0.txt:
  Clarify postinstall instructions, bug #137326.
