@@ -1,0 +1,3 @@
+MD5 7157ce0246b356d5b60ec854f73eccc7 phpMyAdmin-2.9.0.tar.bz2 2040824
+RMD160 97a07b41db17306d42fdfae0521cc0ac78e897b0 phpMyAdmin-2.9.0.tar.bz2 2040824
+SHA256 01e08a64b31c395cecb44dd1213956b4dbbc0a02af3cafaf6d566dd811819222 phpMyAdmin-2.9.0.tar.bz2 2040824
