@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/phpmyadmin
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.200 2006/09/12 03:57:41 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.201 2006/09/22 00:01:33 rl03 Exp $
+
+*phpmyadmin-2.9.0 (22 Sep 2006)
+
+  22 Sep 2006; Renat Lumpau <rl03@gentoo.org> +phpmyadmin-2.9.0.ebuild:
+  Version bump
 
   12 Sep 2006; Renat Lumpau <rl03@gentoo.org>
   files/postinstall-en-2.8.0.txt:
